; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_rdp.c_rdp_send_input.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_rdp.c_rdp_send_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RDP_DATA_PDU_INPUT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rdp_send_input(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = call i32 @rdp_init_data(i32 16)
  store i32 %12, i32* %11, align 4
  %13 = load i32, i32* %11, align 4
  %14 = call i32 @out_uint16_le(i32 %13, i32 1)
  %15 = load i32, i32* %11, align 4
  %16 = call i32 @out_uint16(i32 %15, i32 0)
  %17 = load i32, i32* %11, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @out_uint32_le(i32 %17, i32 %18)
  %20 = load i32, i32* %11, align 4
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @out_uint16_le(i32 %20, i32 %21)
  %23 = load i32, i32* %11, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @out_uint16_le(i32 %23, i32 %24)
  %26 = load i32, i32* %11, align 4
  %27 = load i32, i32* %9, align 4
  %28 = call i32 @out_uint16_le(i32 %26, i32 %27)
  %29 = load i32, i32* %11, align 4
  %30 = load i32, i32* %10, align 4
  %31 = call i32 @out_uint16_le(i32 %29, i32 %30)
  %32 = load i32, i32* %11, align 4
  %33 = call i32 @s_mark_end(i32 %32)
  %34 = load i32, i32* %11, align 4
  %35 = load i32, i32* @RDP_DATA_PDU_INPUT, align 4
  %36 = call i32 @rdp_send_data(i32 %34, i32 %35)
  ret void
}

declare dso_local i32 @rdp_init_data(i32) #1

declare dso_local i32 @out_uint16_le(i32, i32) #1

declare dso_local i32 @out_uint16(i32, i32) #1

declare dso_local i32 @out_uint32_le(i32, i32) #1

declare dso_local i32 @s_mark_end(i32) #1

declare dso_local i32 @rdp_send_data(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
